<resources>
    <string name="wifi_fail_to_scan">"Can't scan for networks"</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_passpoint">Passpoint</string>
    <string name="wifi_security_short_WAPI_PSK">WAPI PSK</string>
    <string name="wifi_security_WAPI_PSK">WAPI PSK</string>
    <string name="wifi_security_short_WAPI_CERT">WAPI CERT</string>
    <string name="wifi_security_WAPI_CERT">WAPI CERT</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">"Couldn't configure IP"</string>
    <string name="wifi_disabled_by_recommendation_provider">Not connected due to low quality network</string>
    <string name="wifi_disabled_wifi_failure">"Couldn't connect to WLAN"</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_no_internet_no_reconnect">"Can't connect to the internet"</string>
    <string name="wifi_no_internet">"Can't connect to the internet"</string>
    <string name="saved_network">Saved by %1$s</string>
    <string name="connected_via_network_scorer">Automatically connected via %1$s</string>
    <string name="connected_via_network_scorer_default">Automatically connected via network rating provider</string>
    <string name="connected_via_passpoint">Connected via %1$s</string>
    <string name="available_via_passpoint">Available via %1$s</string>
    <string name="settings_package">com.android.settings</string>
    <string name="certinstaller_package">com.android.certinstaller</string>
    <string name="wifi_connected_no_internet">Connected, no internet</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_map">Connected (no message access)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_profile_a2dp">Media audio</string>
    <string name="bluetooth_profile_headset">Phone audio</string>
    <string name="bluetooth_profile_opp">File transfer</string>
    <string name="bluetooth_profile_hid">Input device</string>
    <string name="bluetooth_profile_pan">Internet access</string>
    <string name="bluetooth_profile_pbap">Contact sharing</string>
    <string name="bluetooth_profile_pbap_summary">Use for contact sharing</string>
    <string name="bluetooth_profile_pan_nap">Internet connection sharing</string>
    <string name="bluetooth_profile_map">Used for accessing messages</string>
    <string name="bluetooth_profile_sap">Used for accessing SIM</string>
    <string name="bluetooth_profile_dun">Used for accessing network via dial-up</string>
    <string name="bluetooth_profile_a2dp_high_quality">Use high quality audio: %1$s</string>
    <string name="bluetooth_profile_a2dp_high_quality_unknown_codec">Use high quality audio</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_map_profile_summary_connected">Connected to MAP</string>
    <string name="bluetooth_sap_profile_summary_connected">Connected to SAP</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected to input device</string>
    <string name="bluetooth_pan_user_profile_summary_connected">Connected to device for internet access</string>
    <string name="bluetooth_pan_nap_profile_summary_connected">Sharing local Internet connection with device</string>
    <string name="bluetooth_dun_profile_summary_connected">Connected to DUN server</string>
    <string name="bluetooth_pan_profile_summary_use_for">Use for internet access</string>
    <string name="bluetooth_map_profile_summary_use_for">Use for MAP</string>
    <string name="bluetooth_sap_profile_summary_use_for">Use for SIM access</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="bluetooth_opp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_hid_profile_summary_use_for">Use for input</string>
    <string name="bluetooth_dun_profile_summary_use_for">Use for dial-up network access</string>
    <string name="bluetooth_pairing_accept">Pair</string>
    <string name="bluetooth_pairing_accept_all_caps">PAIR</string>
    <string name="bluetooth_pairing_decline">Cancel</string>
    <string name="bluetooth_pairing_will_share_phonebook">Pairing grants access to your contacts and call history when connected.</string>
    <string name="bluetooth_pairing_error_message">"Couldn't pair with %1$s."</string>
    <string name="bluetooth_pairing_pin_error_message">"Couldn't pair with %1$s because of an incorrect PIN or passkey."</string>
    <string name="bluetooth_pairing_device_down_error_message">"Can't communicate with %1$s."</string>
    <string name="bluetooth_pairing_rejected_error_message">Pairing rejected by %1$s.</string>
    <string name="accessibility_wifi_off">WLAN is off.</string>
    <string name="accessibility_no_wifi">No WLAN.</string>
    <string name="accessibility_wifi_one_bar">WLAN one bar.</string>
    <string name="accessibility_wifi_two_bars">WLAN two bars.</string>
    <string name="accessibility_wifi_three_bars">WLAN three bars.</string>
    <string name="accessibility_wifi_signal_full">WLAN signal full.</string>
    <string name="process_kernel_label">Android OS</string>
    <string name="data_usage_uninstalled_apps">Removed apps</string>
    <string name="data_usage_uninstalled_apps_users">Removed apps and users</string>
    <string name="tether_settings_title_usb">USB tethering</string>
    <string name="tether_settings_title_wifi">Portable hotspot</string>
    <string name="tether_settings_title_bluetooth">Bluetooth tethering</string>
    <string name="tether_settings_title_usb_bluetooth">Tethering</string>
    <string name="tether_settings_title_all">Tethering &amp; portable hotspot</string>
    <string name="managed_user_title">All work apps</string>
    <string name="user_guest">Guest</string>
    <string name="unknown">Unknown</string>
    <string name="running_process_item_user_label">User: %1$s</string>
    <string name="launch_defaults_some">Some defaults set</string>
    <string name="launch_defaults_none">No defaults set</string>
    <string name="tts_settings">Text-to-speech settings</string>
    <string name="tts_settings_title">Text-to-speech output</string>
    <string name="tts_default_rate_title">Speech rate</string>
    <string name="tts_default_rate_summary">Speed at which the text is spoken</string>
    <string name="tts_default_pitch_title">Pitch</string>
    <string name="tts_default_pitch_summary">Affects the tone of the synthesized speech</string>
    <string name="tts_default_lang_title">Language</string>
    <string name="tts_lang_use_system">Use system language</string>
    <string name="tts_lang_not_selected">Language not selected</string>
    <string name="tts_default_lang_summary">Sets the language-specific voice for the spoken text</string>
    <string name="tts_play_example_title">Listen to an example</string>
    <string name="tts_play_example_summary">Play a short demonstration of speech synthesis</string>
    <string name="tts_install_data_title">Install voice data</string>
    <string name="tts_install_data_summary">Install the voice data required for speech synthesis</string>
    <string name="tts_engine_security_warning">This speech synthesis engine may be able to collect all the text that will be spoken, including personal data like passwords and credit card numbers. It comes from the %s engine. Enable the use of this speech synthesis engine?</string>
    <string name="tts_engine_network_required">This language requires a working network connection for text-to-speech output.</string>
    <string name="tts_default_sample_string">This is an example of speech synthesis</string>
    <string name="tts_status_title">Default language status</string>
    <string name="tts_status_ok">%1$s is fully supported</string>
    <string name="tts_status_requires_network">%1$s requires network connection</string>
    <string name="tts_status_not_supported">"%1$s isn't supported"</string>
    <string name="tts_status_checking">Checking…</string>
    <string name="tts_engine_settings_title">Settings for %s</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="disable_notification_title">Hide notifications</string>
    <string name="disable_notification_summary">Never show notifications from selected apps</string>
    <string name="expanded_confirm_disable_notification">Hide</string>
    <string name="mdb_restore_info1">"Restore your phone's data"</string>
    <string name="mdb_restore_info2">"Don't disconnect USB"</string>
    <string name="mdb_restore_cancel">Cancel</string>
    <string name="mdb_restore_mode">Restore mode</string>
    <string name="mdb_entering">Starting…</string>
    <string name="no_weather_description">Get weather info ></string>
    <string name="accessibility_desc_notification_shade">Notification shade</string>
    <string name="accessibility_desc_quick_settings">Quick settings</string>
    <string name="accessibility_desc_block_notification">Hide notifications</string>
    <string name="accessibility_desc_confirm_block">Hide</string>
    <string name="accessibility_settings">Settings</string>
    <string name="accessibility_search_scanner">Scanner</string>
    <string name="search_hint">Search for websites, apps, contacts, and videos</string>
    <string name="how_to_use_fsg">You can perform these actions using gestures:</string>
    <string name="how_to_back_home">Go to Home screen</string>
    <string name="how_to_switch_recents">Open Recents</string>
    <string name="fsg_demo_back">Back</string>
    <string name="fsg_demo_go_on">Learn</string>
    <string name="fs_gesture_back_ready_title">Go back</string>
    <string name="fs_gesture_final_title">"You're ready to rock!"</string>
    <string name="fs_gesture_final_summary">You can switch back to using buttons in Settings > Full screen display</string>
    <string name="fs_gesture_final_restart">One more time</string>
    <string name="fs_gesture_final_over">"I'm done"</string>
</resources>