<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/white" android:paddingBottom="@dimen/fsg_demo_paddingbottom" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/fsgesture_final_title_size" android:textStyle="bold" android:textColor="@color/fsgesture_final_title_font_color" android:gravity="center" android:id="@id/fs_gesture_final_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fsgesture_final_title_margin_top" android:text="@string/fs_gesture_final_title" />
    <TextView android:textSize="@dimen/fsgesture_final_summary_size" android:textColor="@color/fsgesture_final_summary_font_color" android:gravity="center" android:id="@id/fs_gesture_final_summary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fsgesture_final_summary_margin_top" android:text="@string/fs_gesture_final_summary" android:layout_below="@id/fs_gesture_final_title" />
    <TextView android:textColor="@drawable/btn_text_color_normal" android:id="@id/fs_gesture_final_restart" android:layout_marginLeft="@dimen/fsg_demo_paddinglr" android:text="@string/fs_gesture_final_restart" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" style="@style/FsgDemoStepTextStyle" />
    <TextView android:textColor="@drawable/btn_text_color_next" android:id="@id/fs_gesture_final_over" android:layout_marginRight="@dimen/fsg_demo_paddinglr" android:text="@string/fs_gesture_final_over" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" style="@style/FsgDemoStepTextStyle" />
</RelativeLayout>