<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.phone.NotificationHeaderView android:id="@id/expanded_notifications_header" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.systemui.statusbar.AlphaOptimizedLinearLayout android:layout_gravity="start|bottom|center" android:orientation="vertical" android:id="@id/disable_notification_description" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/disable_notification_description_margin_bottom">
        <TextView android:textSize="@dimen/disable_notification_title_text_size" android:id="@id/disable_notification_title" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disable_notification_title" android:singleLine="true" style="@style/TextAppearance.StatusBar.Expanded.Title" />
        <TextView android:id="@id/disable_notification_content" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/disable_notification_summary" android:singleLine="true" style="@style/TextAppearance.StatusBar.Expanded.Content" />
    </com.android.systemui.statusbar.AlphaOptimizedLinearLayout>
    <com.android.systemui.statusbar.phone.NotificationBlocker android:layout_gravity="end|bottom|center" android:id="@id/expanded_notification_manager_container" android:addStatesFromChildren="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/notification_edit_view_margin_bottom" android:layout_marginEnd="@dimen/notification_edit_view_margin_end">
        <Space android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <ImageView android:layout_gravity="center" android:id="@id/expanded_notification_enter_edit_mode_button1" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/expanded_notification_enter_edit_mode" android:contentDescription="@string/accessibility_desc_block_notification" />
        <ImageView android:layout_gravity="center" android:id="@id/expanded_notification_exit_edit_mode_button" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/expanded_notification_exit_edit_mode" android:contentDescription="@string/accessibility_desc_confirm_block" />
        <TextView android:id="@id/confirm_disable_notification" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/expanded_confirm_disable_notification" style="@style/TextAppearance.StatusBar.Expanded.Blocker" />
    </com.android.systemui.statusbar.phone.NotificationBlocker>
</com.android.systemui.statusbar.phone.NotificationHeaderView>