<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.systemui.statusbar.SearchView android:gravity="center_vertical" android:id="@id/search" android:background="@drawable/expanded_search_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/expanded_header_padding_top">
        <TextView android:textSize="@dimen/expanded_search_text_size" android:textColorHint="@color/status_bar_expanded_search" android:layout_gravity="start|center" android:id="@id/search_hint" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/search_hint" android:singleLine="true" android:layout_weight="1.0" />
        <ImageView android:layout_gravity="end|center" android:id="@id/search_scanner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/search_scanner" android:contentDescription="@string/accessibility_search_scanner" />
    </com.android.systemui.statusbar.SearchView>
    <com.android.systemui.statusbar.WeatherView android:gravity="bottom" android:layout_gravity="start|bottom|center" android:id="@id/weather" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/expanded_notification_weather_bottom" android:layout_marginStart="@dimen/expanded_notification_header_start">
        <com.android.systemui.statusbar.ColorImageTextView android:entries="@array/duration_entries" android:id="@id/temperature" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" android:layout_alignParentBottom="true" android:entryValues="@array/duration_entryValues" android:layoutDirection="ltr" />
        <com.android.systemui.statusbar.policy.Clock android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Weather" android:id="@id/date_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_marginStart="@dimen/expanded_notification_weather_temperature_right" android:layout_toEndOf="@id/temperature" />
        <TextView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Weather.Description" android:id="@id/weather_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/expanded_notification_weather_content_bottom" android:text="@string/no_weather_description" android:layout_above="@id/date_time" android:layout_marginStart="@dimen/expanded_notification_weather_temperature_right" android:layout_toEndOf="@id/temperature" />
    </com.android.systemui.statusbar.WeatherView>
    <ImageView android:layout_gravity="end|bottom|center" android:id="@id/settings_button" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/expanded_notification_header_setting_bottom" android:src="@drawable/status_bar_expanded_quicksettings" android:contentDescription="@string/accessibility_settings" android:layout_marginEnd="@dimen/expanded_notification_header_setting_end" />
    <com.android.systemui.statusbar.phone.ExpandableTogglesButton android:layout_gravity="end|bottom|center" android:id="@id/expand_toggles_button" android:layout_width="@dimen/expanded_notification_header_expand_width" android:layout_height="@dimen/expanded_notification_header_expand_height" android:layout_marginBottom="@dimen/expanded_notification_header_setting_bottom" android:layout_marginEnd="@dimen/expanded_notification_header_expand_end" />
    <include android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/expanded_notification_header_detail_start" android:layout_marginEnd="20.0dip" layout="@layout/status_bar_expanded_notifications_header" />
    <TextView android:textAppearance="@style/TextAppearance.QS.DetailHeader" android:gravity="bottom" android:layout_gravity="start|bottom|center" android:orientation="horizontal" android:id="@id/qs_detail_header" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/expanded_notification_detail_bottom" android:drawablePadding="13.0dip" android:contentDescription="@string/accessibility_back" android:drawableStart="@drawable/qs_header_arrow" android:layout_marginStart="@dimen/expanded_notification_header_detail_start" />
</FrameLayout>